<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/White">

    <LinearLayout
        android:id="@+id/ll_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical">

        <!-- Label of the Other Drugs-->
        <TextView
            android:id="@+id/OtherDrugs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other_drugs"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginRight="@dimen/margin_right"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <!-- Input of the Other Drugs-->
        <EditText
            android:id="@+id/OtherDrugsValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginRight="@dimen/margin_right"/>

        <!-- Label of Treatment completed (Yes/No)-->
        <TextView
            android:id="@+id/TreatComplete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/treat_complete"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginRight="@dimen/margin_right"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <!-- Input of Treatment completed Yes or No related Questions-->
        <RadioGroup
            android:id="@+id/Treatmentstatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radio_treat_yes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/yes"/>

            <RadioButton
                android:id="@+id/radio_treat_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no"/>
        </RadioGroup>


        <!-- Label of Defaulted/Died/others (Yes/No)-->
        <TextView
            android:id="@+id/DDOStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ddo"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginRight="@dimen/margin_right"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <!-- Input of Defaulted/Died/others Yes or No related Questions-->
        <RadioGroup
            android:id="@+id/personstatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radio_ddo_yes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/yes"/>

            <RadioButton
                android:id="@+id/radio_ddo_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no"/>
        </RadioGroup>


        <!-- Label of the Remarks-->
        <TextView
            android:id="@+id/Remarks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remarks"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginRight="@dimen/margin_right"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <!-- Input of the Remarks-->
        <EditText
            android:id="@+id/RemarksValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginRight="@dimen/margin_right"/>

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Save"
            android:onClick="submitclick"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="5dp"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:textStyle="bold"/>
    </LinearLayout>
</LinearLayout>
